--- a/artoolkitplus/platform/pom.xml
+++ b/artoolkitplus/platform/pom.xml
@@ -10,7 +10,7 @@
     <relativePath>../../</relativePath>
   </parent>
 
-  <groupId>org.bytedeco.javacpp-presets</groupId>
+  <groupId>org.bytedeco</groupId>
   <artifactId>artoolkitplus-platform</artifactId>
   <version>2.3.1-${project.parent.version}</version>
   <name>JavaCPP Presets Platform for ARToolKitPlus</name>
